# plot

./: .cursorrules  .gitignore  README.md  agent-rules.md  config.example.yml  config.yml  pyproject.toml
plot/cli/: __init__.py  builder.py  commands.py  main.py  stubs.py
plot/core/: config.py  errors.py  output.py  repo_config.py  scanner.py  skills.py  utils.py  workflow.py
plot/core/base/: errors.py  output.py  result.py  utils.py
plot/core/config/: execution.py  paths.py
plot/core/story/: knowledge_ops.py  ops.py  router.py  task_ops.py  transitions.py  verify.py  workflow.py
plot/db/: __init__.py  _base.py  protocols.py  schema.py  utils.py
plot/db/clients/sqlite/: __init__.py  base.py
plot/db/knowledge/: __init__.py  client.py  erd.md  models.py  schema.py
plot/db/logger/: __init__.py  client.py  models.py  schema.py
plot/db/models/: __init__.py  events.py  log_row.py  stage_row.py  task_row.py
plot/db/story/: __init__.py  client.py  erd.md  models.py  schema.py
skills/flow-utils/: SKILL.md
skills/workflow/: SKILL.md
templates/: code-review-action.md  code-review.md  evaluate-addons.md  execution.md  finalization.md  introspect.md  mr-description.md  mr-info-action.md  planning.md  pre-design.md  quality-gate.md  task-creation.md  verify.md
templates/addons/: data-pipeline.md
tests/: test_registry.py
