[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plot"
version = "0.1.0"
description = "Story-based planning and execution CLI for AI-assisted development"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "pyyaml",
]

[project.scripts]
plot = "plot.cli.main:main"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.0",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["plot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
packages = ["plot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
